# llm-from-scratch

./: .gitignore  README.md  pyproject.toml
attention_mechanisms/: __init__.py  benchmark.py  multi_head_attn_impl.py  notebook.py
deployment/: README.md  modal_vscode.py
finetuning/classification/: train_gpt.py
finetuning/instruction/: instruction_finetuning.py
gpt_model/: __init__.py  gpt.py  gpt_gqa.py  load_weights.py  perf-analysis.py  test_weight_loading.py
pretraining/: gpt_train.py  notebook.py  prep_dataset.py  pretraining_simple.py
utils/: README.md  __init__.py  gpt2_download.py  import_helper.py  loss.py  train.py
working_with_text_data/bytepair-enc/: benchmark.py  bpe_scratchbook.py
working_with_text_data/bytepair-enc/minbpe/: __init__.py  gpt4.py
