[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[recommended]>=0.17.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
extras = [
    "transformers>=4.57.1",
]

# target torch to cuda 12.8
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
