[project]
name = "language-model-scratchbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.9.0",
    "datasets>=4.4.1",
    "galore-torch>=1.0",
    "huggingface-hub[hf-transfer]>=0.35.3",
    "manim-slides[manim]>=5.5.2",
    "marimo[recommended]>=0.17.0",
    "matplotlib>=3.10.7",
    "modal>=1.2.1",
    "numpy>=2.3.4",
    "polars>=1.34.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "thop>=0.1.1.post2209072238",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.22.3",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
extras = []

# target torch to cuda 12.8
[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
